--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CheatActivity"
+            android:label="@string/title_activity_cheat"
+            android:parentActivityName=".QuizActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="geoquiz.com.scrubapps.com.geoquiz.QuizActivity" />
+        </activity>
     </application>
 
 </manifest>
